--- a/templates/chat.html
+++ b/templates/chat.html
@@ -25,7 +25,7 @@
         <div class="inputs">
             <div class="emoji-container">
                 <emoji-picker id="emoji-picker" style="display:none;"></emoji-picker>
-                <button onclick="toggleEmojiPicker()"></button>
+                <button onclick="toggleEmojiPicker()">😀</button>
             </div>
             <input type="text" placeholder="Message" id="message" required />
             <button type="button" id="send-btn" onClick="sendMessage()">Send</button>
